Add rating type to game launch message